# lingo

./: .issues-sync-state  404.html  CHANGELOG.md  README.md  TASKS.md  index.html  makefile  mkdocs.yml  pyproject.toml
.gemini/: .gitignore
00-introduction/: index.html
01-hello-lingo/: index.html
02-messages-and-context/: index.html
03-the-engine/: index.html
04-flows/: index.html
05-tools/: index.html
06-skills-and-routing/: index.html
07-state/: index.html
08-patterns/: index.html
09-native-tools/: index.html
book/: 00-introduction.md  01-hello-lingo.md  02-messages-and-context.md  03-the-engine.md  04-flows.md  05-tools.md  06-skills-and-routing.md  07-state.md  08-patterns.md  09-native-tools.md  index.md
deploy/: index.html
design/: index.html
develop/: index.html
docs/: _quarto.yml  deploy.md  design.md  develop.md  index.md  lingo.md  llm.md  skill.md  user-guide.md
examples/: 01_hello_lingo.py  __init__.py  banker.py  fsm.py  hello_world.py  index_hello.py  index_llm.py  index_wizard.py  injection.py  native_tool_call.py  native_tool_call_streaming.py  sample_flow.yaml  smart_home.py  state_rpg.py  test_simple_yaml.py  test_validation.py  test_yaml_serializer.py  when.py  wizard.py
issues/: 10-feat-add-a-retry-composite-node-for-automatic-retries-with-fallback-handling.md  7-featureyaml-serialization.md  8-featflow-make-decide-and-choose-execution-atomic.md  9-feat-add-context-checkpointing-and-rollback-for-advanced-flow-control.md
journal/: 2026-03-13.md
lingo/: __init__.py  chatbot.py  cli.py  context.py  core.py  embed.py  (+11 more)
(+45 files in other folders)
